[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
bootstrap-macros = { path = "bootstrap_macros/" }
cfg-if = "1.0.4"
parking_lot = "0.12.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_SystemInformation"
] }

[workspace]
members   = ["bootstrap_macros/"]